[package]
name = "rust_server"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-lsp = "0.20.0"
axum = "0.6.20"
tokio = { version = "1.32.0", features = ["full"] }
serde = "1.0.188"
serde_json = "1.0.140"
chrono= "0.4.40"
dashmap = "5.2.0"
tree-sitter-sscript = {path = "../tree-sitter-sscript", version = "0.1.1"}
tree-sitter = "0.25.3"
tree-sitter-highlight = "0.25.3"
